# symbol-meta-service

./: .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/workflows/: generate_docs.yml  test.yml
app/: constants.py  db.py  dependencies.py  main.py  schemas.py
app/internal/: id_generator.py  lookup_ref_data_uuid.py  symbols_helpers.py
app/routers/: corp_actions.py  symbols.py
app/schemas/: __init__.py  corp_actions.py  symbols.py
app/tests/: __init__.py  conftest.py  test_corporate_actions.py  test_public_converters.py  test_root.py  test_schemas.py  test_symbols.py
scripts/: generate_open_api_docs.py  generate_openapi_schema.py  generate_redoc.py
